fix error with extra margins at <5 <li> items

--- a/productview.less
+++ b/productview.less
@@ -338,8 +338,8 @@ img {
   overflow: hidden;
 }
 
-#item-colors .list li.related-item:nth-child(5n),
-#related-products .list li.related-item:nth-child(5n) {
+#item-colors .list li.related-item:last-child,
+#related-products .list li.related-item:last-child {
   margin-right: 0;
 }
 
